<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- book name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname"

            />
        <EditText
            android:id="@+id/addBookFragment_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname_hint"/>

        </LinearLayout>

    <!-- ISBN -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookISBN"
            />
        <TextView
            android:id="@+id/addBookFragment_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookISBN_hint"/>

        </LinearLayout>

    <!-- description -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            />
        <EditText
            android:id="@+id/addBookFragment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            />

        </LinearLayout>

    <!-- submit -->
    <Button
        android:id="@+id/addBookFragment_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        />

</LinearLayout>
