<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yobook.activity.FunctionTestActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:id="@+id/functionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/testLogin"
            android:text="@string/test_login"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/testLogout"
            android:text="@string/test_logout"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_register"
            android:enabled="false"
            android:visibility="gone"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_readISBN"
            android:enabled="false"
            android:visibility="gone"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_readUserInfo"
            android:enabled="false"
            android:visibility="gone"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/testReadBookInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_readBookInfo"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/testUploadBookInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_uploadBookInfo"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/testShareInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_shareInfo"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/testServerTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_serverTime"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/testAroundUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_query_around"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/functionLayout"
        >

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

    </ScrollView>

</RelativeLayout>
